@@ -46,6 +46,19 @@ from ClusterShell.Engine.Factory import PreferredEngine
 from ClusterShell.CLI.Display import THREE_CHOICES
 
 
+def check_autostep(option, opt, value):
+    """type-checker function for autostep"""
+    try:
+        if '%' in value:
+            return float(value[:-1]) / 100.0
+        return int(value)
+    except ValueError:
+        if value == 'auto':
+            return value
+        error_fmt = "option %s: invalid value: %r, should be node count, " \
+                    "node percentage or 'auto'"
+        raise optparse.OptionValueError(error_fmt % (opt, value))
+
 def check_safestring(option, opt, value):
     """type-checker function for safestring"""
     try:
@@ -61,8 +74,9 @@ def check_safestring(option, opt, value):
 
 class Option(optparse.Option):
     """This Option subclass adds a new safestring type."""
-    TYPES = optparse.Option.TYPES + ("safestring",)
+    TYPES = optparse.Option.TYPES + ("autostep", "safestring",)
     TYPE_CHECKER = copy(optparse.Option.TYPE_CHECKER)
+    TYPE_CHECKER["autostep"] = check_autostep
     TYPE_CHECKER["safestring"] = check_safestring
 
 class OptionParser(optparse.OptionParser):
@@ -273,9 +287,10 @@ class OptionParser(optparse.OptionParser):
                           help="call external node groups support to "
                                "display all nodes")
         optgrp.add_option("--autostep", action="store", dest="autostep",
-                          help="auto step threshold number when folding "
-                               "nodesets",
-                          type="int")
+                          help="enable a-b/step style syntax when folding, "
+                               "value is min node count threshold (eg. '4', "
+                               "'50%' or 'auto')",
+                          type="autostep")
         optgrp.add_option("-d", "--debug", action="store_true", dest="debug",
                           help="output more messages for debugging purpose")
         optgrp.add_option("-q", "--quiet", action="store_true", dest="quiet",
